# harper

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .release-please-manifest.json  .rustfmt.toml  .yamllint.yml  404.html  AGENTS.md  BUILD  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  GEMINI.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MODULE.bazel  Makefile  PLANNER_NEXT_STEPS.md  PRIVACY.md  README.md  RESET.md  SECURITY.md  WORKSPACE  action.yml  cargo-bazel-lock.json  cliff.toml  deny.toml  dist-workspace.toml  env.example  harpertest  index.html  justfile  (+7 more)
.agents/skills/: commit.md  docs.md  launch.md  lint.md  localfix.md  new-file-20260510165607.md  pr.md  test.md
.cargo/: audit.toml  config.toml
.codex/: AGENTS.md  config.toml  pr-issue-backfill.md
.devcontainer/: README.md  devcontainer.json
.gemini/: settings.json
.github/: CODEOWNERS  dependabot.yml  labeler.json  labeler.yml  pr-title-checker-config.json  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  pull_request_perspective.md  run_summary.md
.github/rulesets/: main-branch-protection.json
.github/workflows/: README.md  add-pr-to-project.yml  apply-rulesets.yml  assign-pr-milestone.yml  auto-merge.yml  bazel-smoke.yml  bazel.yml  benchmarks.yml  build-bazel.yml  build.yml  cancel-runs.yml  ci.yml  cla.yml  clippy.yml  codeql.yml  commitlint.yml  dependency-review.yml  devskim.yml  docker-ci.yml  docker-e2e.yml  docker.yml  docs.yml  draft.yml  e2e.yml  fix-changelog.yml  fix-pr-title.yml  harper-check.yml  install-script.yml  integration.yml  label-sync.yml  linux-packages.yml  lock-merged-prs.yml  nightly.yml  nix-arch-packages.yml  normalize-pr-description.yml  npm-package.yml  package-test.yml  post-auto-merge-ci.yml  pr-checks.yml  pr-labels.yml  (+16 more)
AGENTS/: index.html
CONFIG_REFERENCE/: index.html
PRIVACY/: index.html
RESET/: index.html
SUPABASE_AUTH_PLAN/: index.html
about/governance/: index.html
about/privacy/: index.html
ci/: commitlint.config.js
config/: BUILD  default.toml  docker.toml  env.example  labeler.yml  local.example.toml  local.toml
development/AGENTS/: index.html
development/api/: index.html
development/bazel-windows-debugging/: index.html
development/cicd/: index.html
development/contributing/: index.html
docker/: DOCKER.md  Dockerfile  docker-compose.yml
docs/: AGENTS.md  CONFIG_REFERENCE.md  PRIVACY.md  RESET.md  SUPABASE_AUTH_PLAN.md  index.md  nightly-release.md
docs/about/: governance.md  privacy.md
docs/development/: AGENTS.md  api.md  bazel-windows-debugging.md  cicd.md  contributing.md
docs/getting-started/: installation.md  quick-start.md
docs/testing/: tui-control-loop-smoke.md  tui-routing-smoke.md
docs/user-guide/: about.md  chat.md  clipboard.md  configuration.md  firmware.md  installation.md  keychain.md  quick-start.md  sandbox.md  screenpipe.md  server.md  (+1 more)
formula/: harper-ai.rb
lib/harper-core/: BUILD  CHANGELOG.md  Cargo.toml
lib/harper-core/src/: lib.rs
lib/harper-core/src/agent/: chat.rs  intent.rs  mod.rs  offline_shell.rs  prompt.rs
lib/harper-core/src/core/: agents.rs  auth.rs  cache.rs  constants.rs  error.rs  io_traits.rs  llm_client.rs  mod.rs  models.rs  native_shell.rs  plan.rs  plan_events.rs
lib/harper-core/src/memory/: cache.rs  mod.rs  session_service.rs
lib/harper-core/src/memory/storage/: mod.rs
lib/harper-core/src/runtime/: config.rs  mod.rs  scheduler.rs  update-public-key.b64  update.rs
lib/harper-core/src/runtime/utils/: crypto.rs  mod.rs
lib/harper-core/src/server/: auth.rs  mod.rs
lib/harper-core/src/tools/: adx.rs  api.rs  code_analysis.rs  codebase_investigator.rs  db.rs  filesystem.rs  firmware.rs  git.rs  github.rs  image.rs  mod.rs  parsing.rs  plan.rs  screenpipe.rs  shell.rs  todo.rs  web.rs
lib/harper-firmware/: BUILD  Cargo.toml
lib/harper-firmware/examples/: basic.rs
lib/harper-firmware/src/: esp32.rs  lib.rs  raspberry_pi.rs  stm32.rs
lib/harper-mcp-server/: BUILD  Cargo.toml
lib/harper-mcp-server/src/: main.rs
lib/harper-sandbox/: BUILD  Cargo.toml
lib/harper-sandbox/examples/: basic.rs
lib/harper-sandbox/src/: backend.rs  errors.rs  lib.rs  policy.rs  request.rs
lib/harper-ui/: BUILD  CHANGELOG.md  Cargo.toml
lib/harper-ui/src/: auth.rs  lib.rs  main.rs  update.rs
lib/harper-ui/src/interfaces/: mod.rs
lib/harper-ui/src/interfaces/ui/: app.rs  auth.rs  events.rs  logo_image.rs  mod.rs  settings.rs  theme.rs  tui.rs  widgets.rs
lib/harper-ui/src/plugins/: mod.rs
lib/harper-ui/src/plugins/syntax/: mod.rs
nightly-release/: index.html
patches/: BUILD  zune_jpeg_avx2_unsafe.patch  zune_jpeg_neon_allow_unsafe.patch
plans/: README.md  agents-md-improvement.json  agents-md-improvement.md  distribution-and-self-update.json  distribution-and-self-update.md  master-plan.json  milestone-1-live-execution.json  milestone-2-plan-job-coordination.json  milestone-3-cross-interface.json  milestone-4-planner-maturity.json  routing-improvement.json  routing-improvement.md
scripts/: check-update-signing-key.py  commit-msg  generate-linux-packages.py  generate-nix-arch-package-manifests.py  generate-release-manifest.py  generate-windows-package-manifests.py  generate_release_notes.sh  install-harper.sh  msg_filter.py  pre-commit  rewrite_msg.sh  test-comprehensive.sh  test-functional.sh  test-intent.sh  test-ollama.sh  test-working.sh  test.sh  update-copyright.sh  update-homebrew-tap.py  update_version.sh  validate.sh
search/: search_index.json
src/: config.rs  lib.rs  main.rs
tests/: command_log_test.rs  error_handling_test.rs  integration.rs  integration_cli_test.rs  integration_test.rs  performance_test.rs  security_test.rs  session_service_test.rs  tools_test.rs
website/: VERSION  blog.html  changelog.html  docs.html  index.html  installation.html  nav-updates.js  nav-updates.json  privacy.html  server.html  styles.css  terms.html  troubleshooting.html
(+77 files in other folders)
