[package]
name = "harper"
version = "0.1.7"
edition = "2021"
rust-version = "1.82.0"
authors = ["Harper Contributors"]
license = "Apache-2.0"
description = "An AI agent that connects to multiple providers, executes shell commands, and maintains conversation history"
homepage = "https://github.com/harpertoken/harper"
repository = "https://github.com/harpertoken/harper"
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4.41"
colored = "3.0.0"
config = "0.14.0"
dotenvy = "0.15"
dirs = "5.0"
turul-mcp-client = "0.1.0"
reqwest = { version = "0.12.20", features = ["json", "native-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
uuid = { version = "1.17.0", features = ["v4"] }
ring = "0.17.14"
hex-literal = "0.4.1"
once_cell = "1.19"

crossterm = "0.28.1"

# Dependency resolution to reduce duplicate versions
[dependencies.base64]
version = "0.22"
[dependencies.bitflags]
version = "2.0"
[dependencies.getrandom]
version = "0.3"
[dependencies.h2]
version = "0.4"
[dependencies.hashbrown]
version = "0.15"
[dependencies.hashlink]
version = "0.10"
[dependencies.http]
version = "1.0"
[dependencies.http-body]
version = "1.0"
[dependencies.hyper]
version = "1.0"
[dependencies.socket2]
version = "0.6"
[dependencies.sync_wrapper]
version = "1.0"
# [dependencies.system-configuration]
# version = "0.6"  # Removed due to compilation errors in v0.6.1
# [dependencies.system-configuration-sys]
# version = "0.6"  # Removed due to compilation errors in v0.6.1
[dependencies.thiserror]
version = "2.0"
[dependencies.thiserror-impl]
version = "2.0"
[dependencies.windows-sys]
version = "0.60"
[dependencies.windows-targets]
version = "0.53"

[dev-dependencies]
tempfile = "3.3.0"
wait-timeout = "0.2.0"
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"
rand = "0.8.5"
regex = "1.0"
lazy_static = "1.4.0"

[[test]]
name = "integration"
path = "tests/integration/integration_test.rs"

[[test]]
name = "performance"
path = "tests/integration/performance_test.rs"

[[test]]
name = "security"
path = "tests/integration/security_test.rs"

[features]
default = []
integration = []
