# Copyright 2026 harpertoken
#
# Licensed under the MIT License and Apache License 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["lib/harper-core", "lib/harper-ui", "lib/harper-mcp-server"]
resolver = "2"

[package]
name = "harper-workspace"
version = "0.3.4"
edition = "2021"
rust-version = "1.85.0"
authors = ["Harper Contributors"]
license = "MIT OR Apache-2.0"
description = "Harper AI assistant"
repository = "https://github.com/harpertoken/harper"
homepage = "https://github.com/harpertoken/harper"

[lib]
name = "harper_workspace"
path = "src/lib.rs"

[dependencies]
harper-core = { path = "lib/harper-core" }
harper-ui = { path = "lib/harper-ui" }

[dev-dependencies]
tempfile = "3.3.0"
lazy_static = "1.4"
regex = "1.10"
criterion = "0.5"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rand = "0.8"
ratatui = "0.30"
syntect = { version = "5.3", features = ["parsing", "html"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
wait-timeout = "0.2"
num_cpus = "1.16"
serde_json = "1.0.140"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
