[package]
name = "harper-mcp-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Harper Contributors"]
license = "Apache-2.0"
description = "MCP server for Harper"

[dependencies]
turul-mcp-json-rpc-server = "0.2.1"
tokio = { version = "^1.48", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
