# Copyright 2026 harpertoken
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "harper-mcp-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Harper Contributors"]
license = "MIT OR Apache-2.0"
description = "MCP server for Harper"
repository = "https://github.com/harpertoken/harper"
homepage = "https://github.com/harpertoken/harper"

[dependencies]
turul-mcp-json-rpc-server = "0.3.34"
tokio = { version = "^1.48", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
lazy_static = "1.5"
dashmap = "6.1"
