[package]
name = "harper-sandbox"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Harper Contributors"]
license = "MIT OR Apache-2.0"
description = "Sandbox isolation for Harper command execution"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.48", features = ["process", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

[features]
default = []
bwrap = []
sandbox_exec = []

[[example]]
name = "sandbox_basic"
path = "examples/basic.rs"
