# Copyright 2026 harpertoken
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "harper-sandbox"
version = "0.1.3"
edition = "2021"
rust-version = "1.85.0"
authors = ["Harper Contributors"]
license = "MIT OR Apache-2.0"
description = "Sandbox isolation for Harper command execution"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.48", features = ["process", "rt", "time", "io-util", "sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

[features]
default = []
bwrap = []
sandbox_exec = []

[dev-dependencies]
tempfile = "3.10"

[[example]]
name = "sandbox_basic"
path = "examples/basic.rs"
