[package]
name = "harper-ui"
version = "0.4.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Harper Contributors"]
license = "MIT OR Apache-2.0"
description = "UI components for Harper AI assistant"
repository = "https://github.com/harpertoken/harper"
homepage = "https://github.com/harpertoken/harper"

[lib]
name = "harper_ui"
path = "src/lib.rs"

[dependencies]
harper-core = { path = "../harper-core" }
arboard = "3.4.0"
colored = "3.0.0"
crossterm = "0.29.0"
dotenvy = "0.15"
keyring = "2.3"
ratatui = "0.30"
syntect = { version = "5.3", features = ["parsing", "html"] }
image = "0.25.6"
rustyline = "14.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
turul-mcp-client = "0.2.1"
uuid = { version = "1.17.0", features = ["v4"] }

[[bin]]
name = "harper"
path = "src/main.rs"

[[bin]]
name = "harper-batch"
path = "src/bin/batch.rs"
